tests/ui/typeck/issue-87771-ice-assign-assign-to-bool.rs
fn main() {
    let mut a;
    a = a = true; //~ ERROR mismatched types
}

// ferrocene-annotations: fls_lv7w7aalpwm5
// Type Inference
//
// ferrocene-annotations: fls_exe4zodlwfez
// Type Unification
